--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 						<id>deploy</id>
 						<phase>deploy</phase>
 						<goals>
-							<goal>deploy</goal>
+							<goal>site-deploy</goal>
 						</goals>
 					</execution>
 				</executions>
