--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,16 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<mule.tools.version>1.7</mule.tools.version>
 		<app.runtime>4.3.0-20201013</app.runtime>
-		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
+		<mule.maven.plugin.version>3.4.2</mule.maven.plugin.version>
+		<!-- <mule.home>${MULE_HOME}</mule.home> -->
+		<anypoint.username>ravikanths</anypoint.username>
+		<anypoint.password>Bbm@2010</anypoint.password>
+		<cloundhub.env>Development</cloundhub.env>
+		<anypoint.uri>https://anypoint.mulesoft.com</anypoint.uri>
+		<anypoint.businessGroup>turningpoint-global-solutions</anypoint.businessGroup>
+		<cloudhub.workerType>MICRO</cloudhub.workerType>
+		<cloudhub.workers>1</cloudhub.workers>
+		<maven.build.timestamp.format>yyMMddHHmmss</maven.build.timestamp.format>
 	</properties>
 
 	<build>
@@ -27,43 +36,24 @@
 				<version>3.4.2</version>
 				<extensions>true</extensions>
 				<configuration>
-					<runtimeFabricDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.3.0</muleVersion>
-						<username>ravikants</username>
-						<password>Bbm@2010</password>
-						<applicationName>test_jenkins</applicationName>
-						<target>rtf</target>
-						<environment>Development</environment>
-						<provider>MC</provider>
-						<replicas>1</replicas>
-						<properties>
-							<key>value</key>
-						</properties>
-						<deploymentSettings>
-							<enforceDeployingReplicasAcrossNodes>false</enforceDeployingReplicasAcrossNodes>
-							<updateStrategy>recreate</updateStrategy>
-							<clustered>false</clustered>
-							<forwardSslSession>false</forwardSslSession>
-							<lastMileSecurity>false</lastMileSecurity>
-							<resources>
-								<cpu>
-									<reserved>20m</reserved>
-									<limit>1500m</limit>
-								</cpu>
-								<memory>
-									<reserved>700Mi</reserved>
-									<limit>800Mi</limit>
-								</memory>
-							</resources>
-							<http>
-								<inbound>
-									<publicUrl>url</publicUrl>
-								</inbound>
-							</http>
-						</deploymentSettings>
-					</runtimeFabricDeployment>
+					<cloudHubDeployment>
+						<uri>${anypoint.uri}</uri>
+						<muleVersion>${mule.version}</muleVersion>
+						<username>${anypoint.username}</username>
+						<password>${anypoint.password}</password>
+						<applicationName>${artifactId}</applicationName>
+						<environment>${cloundhub.env}</environment>
+					</cloudHubDeployment>
 				</configuration>
+				<executions>
+					<execution>
+						<id>deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
