--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>3.4.2</version>
@@ -41,7 +49,7 @@
 						<muleVersion>${mule.version}</muleVersion>
 						<username>${anypoint.username}</username>
 						<password>${anypoint.password}</password>
-						<applicationName>${artifactId}</applicationName>
+						<applicationName>${project.artifactId}</applicationName>
 						<environment>${cloundhub.env}</environment>
 					</cloudHubDeployment>
 				</configuration>
